data/derived/comb/progs/unify/prog8069.ml.out
Characters 55-73:
  |h::t -> (h*h)::sumHelper t;;
           ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
